[build-system]
requires = [
    "pip",
    "setuptools",
    "wheel",
    "pybind11~=3.0",
    "libcasm-global>=2.3.0,<3",
    "libcasm-xtal>=3.0a1,<4",
    "libcasm-composition>=2.2.0,<3",
    "libcasm-clexulator>=3.0a1,<4",
    "libcasm-configuration>=3.0a1,<4",
    "libcasm-monte>=3.0a1,<4",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"
test-skip = "*universal2:arm64"
